# SoloQuest

./: .env.example  .gitignore  CLAUDE.md  README.md  documentation.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.claude/: launch.json  scratchpad.md  settings.json
.claude/agents/: agent-reviewer.md  mobile-reviewer.md  security-reviewer.md  test-writer.md  ui-reviewer.md
.claude/commands/: add-agent.md  add-quest.md  db-migrate.md  dev-agents.md  dev-mobile.md  fix-bug.md  implement.md  pr-review.md
agents/: .env.example  pyproject.toml
agents/src/soloquest_agents/: __init__.py  config.py  graph.py  server.py  state.py
agents/src/soloquest_agents/agents/: adaptive_learning_agent.py  calendar_agent.py  daily_focus_agent.py  expense_agent.py  notion_sync_agent.py  quest_agent.py  screen_time_agent.py  sleep_agent.py  social_accountability_agent.py  steps_agent.py  streak_guardian.py  todo_agent.py  weekly_strategist.py
agents/src/soloquest_agents/llm/: router.py
agents/src/soloquest_agents/tools/: soloquest_api.py
apps/mobile/: app.json  package.json  tailwind.config.js  tsconfig.json
apps/web/: CLAUDE.md  README.md  Solo-Quest-Complete-Gamification-Blueprint.docx  documentation.md  package-lock.json  package.json  tailwind.config.ts
docs/: PENALTY_SYSTEM.md
prisma/: schema.prisma  seed.ts
public/: manifest.json
src/app/: globals.css  layout.tsx
src/components/: BottomNav.tsx  GateExamBanner.tsx  LevelUpModal.tsx  MorningBriefing.tsx  QuestBoard.tsx  QuestCard.tsx  StatBadge.tsx  ToastContainer.tsx  TopBar.tsx  (+1 more)
(+393 files in other folders)
